config/pod56/eccd1/pcg/network-policy/eric-data-search-engine-allow.yaml
## The configuration is used for Grafana accessing data-search-engine to get logs (only for internal test usage)
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
  generation: 1
  labels:
    app.kubernetes.io/managed-by: Helm
  name: eric-data-search-engine-allow

spec:
  ingress:
  - {}
  podSelector:
    matchLabels:
      app.kubernetes.io/name: eric-data-search-engine
  policyTypes:
  - Ingress
